k8s/hazelcast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast
  labels:
    app: hazelcast
spec:
  type: ClusterIP
  selector:
    app: hazelcast
  ports:
    - port: 5701
      targetPort: 5701
      name: hazelcast
    - port: 9404
      targetPort: 9404
      name: metrics
